--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,7 @@ body {
   font-family: "Inter", sans-serif;
   background-color: #000000;
   color: var(--text);
-   overflow-x: hidden;
-   max-width: 100%;
+  overflow-x: hidden;
 }
 
 canvas {
@@ -30,61 +29,7 @@ canvas {
   z-index: -1;
 }
 
-/* NAV */
-header {
-  position: absolute;
-  padding: 30px 50px;
-  width: 100%;
-  backdrop-filter: blur(10px);
-  box-shadow: 0 0 30px var(--highlight);
-  top: 0;
-}
 
-
-
-.nav {
-  width: 75%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-}
-
-.logo {
-  font-weight: 700;
-  font-size: 40px;
-  background: linear-gradient(90deg, rgb(208, 8, 8) 20%, rgb(168, 52, 52) 68%, rgb(108, 0, 0) 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 50px;
-  opacity: 1;
-}
-
-nav a {
-  text-decoration: none;
-  color: #ffffff;
-  font-weight: 700;
-  position: relative;
-  transition: 0.3s;
-  font-size: 25px;
-  opacity: 0.5;
-}
-
-nav a:hover {
-  padding: 1px;
-  background: linear-gradient(90deg, rgb(255, 142, 142) 20%, rgb(255, 67, 67) 68%, rgb(255, 27, 27) 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  opacity: 1.5;
-}
 
 /* HERO */
 .hero {
@@ -94,7 +39,7 @@ nav a:hover {
   align-items: center;
   padding: 300px 150px 150px;
   margin-bottom: 15%;
-  padding: 20% 5% 5%;
+
 
 
 }
@@ -116,7 +61,7 @@ nav a:hover {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  
+
 }
 
 .profile-img img {
@@ -131,7 +76,7 @@ nav a:hover {
   position: absolute;
   align-items: center;
   justify-content: center;
-  
+
 }
 
 
@@ -269,13 +214,13 @@ nav a:hover {
 .especialidades h2 {
   position: relative;
   text-align: center;
-  margin-bottom: 190px;
+  margin-bottom: 270px;
   font-size: 50px;
   background: linear-gradient(90deg, rgb(255, 255, 255) 40%, #ff0000 68%, rgb(255, 255, 255) 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-
+  top: 100px;
 }
 
 .p {
@@ -290,7 +235,6 @@ nav a:hover {
   gap: 100px;
   font-size: 20px;
   max-height: 700px;
-
 }
 
 .Skills {
@@ -446,11 +390,14 @@ h2 {
   margin-bottom: 30px;
 }
 
-
+.sobre {
+  position: relative;
+  bottom: 80px;
+}
 
 .sobre-texto {
   text-align: center;
-  width: 1120px;
+  width: 1520px;
   font-size: 23px;
   position: relative;
   margin-right: 100px;
@@ -463,7 +410,7 @@ h2 {
 .R {
   display: flex;
   position: relative;
-  gap: 200px;
+  gap: 100px;
 }
 
 .pf {
@@ -481,7 +428,7 @@ h2 {
 .title {
   position: relative;
   top: 20px;
-  font-size: 50px;
+  font-size: 40px;
   text-align: center;
 }
 
@@ -502,7 +449,7 @@ h2 {
 
 }
 
-.link{
+.link {
   position: relative;
   align-items: center;
   justify-content: center;
@@ -515,7 +462,7 @@ h2 {
   right: 0;
 }
 
-.h4{
+.h4 {
   position: relative;
   left: 110px;
   margin-bottom: 130px;
@@ -523,7 +470,8 @@ h2 {
 }
 
 
-.linke{
+.linke,
+.githu {
   flex-direction: column-reverse;
   border: #ff0000 solid;
   border-radius: 100px;
@@ -648,7 +596,7 @@ h2 {
 .Contact {
   align-items: center;
   text-align: center;
-  margin-bottom: 130px;
+  margin-bottom: 50px;
 
 }
 
@@ -704,34 +652,31 @@ input::placeholder {
 }
 
 .rodape {
+  position: relative;
+  width: 100%;
   display: flex;
-  gap: 60%;
-  box-shadow: 0 0 30px var(--highlight);
-  padding: 40px 0px 0px 0px;
-  bottom: 0;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 20px var(--highlight) inset;
+  background: transparent;
+  z-index: 999;
 }
 
 
-
 .logo2 {
-  margin-left: 50px;
   font-weight: 700;
+  position: relative;
   font-size: 40px;
   background: linear-gradient(90deg, rgb(208, 8, 8) 20%, rgb(168, 52, 52) 68%, rgb(108, 0, 0) 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  position: relative;
-  left: 0;
-  bottom: 0px;
+  margin: 15px;
 }
 
 .email {
-  margin-left: 50px;
   font-size: 20px;
+  margin: 15px;
 }
-
-
 
 
 
@@ -755,22 +700,10 @@ input::placeholder {
 
 
 @media (max-width: 1600px) {
-  header {
-    position: relative;
-    box-shadow: 0 0 30px var(--highlight);
-    width: 100%;
-    overflow-x: hidden;
-  }
 
-  .rodape {
-    width: 100%;
-    position: relative;
-  }
 
-  .rodape2 {
-    position: relative;
-    bottom: 5px;
-  }
+
+
 
   @keyframes autoRun {
     from {
@@ -816,7 +749,7 @@ input::placeholder {
     font-size: 30px;
   }
 
-  .h4{
+  .h4 {
     position: relative;
     margin-right: 0;
   }
@@ -855,27 +788,36 @@ input::placeholder {
 
 
 /* Tablets (até 1024px) */
-@media (max-width: 1024px) {
+@media (max-width: 1124px) {
 
-  body{
+
+  * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+  body {
     overflow-x: hidden;
   }
 
 
-   .socials{
+
+
+  .socials {
     text-align: center;
     justify-content: center;
     align-items: center;
   }
 
-  .logo{
+  .logo {
     text-align: center;
     justify-content: center;
   }
 
-    .menu{
-      display: none;
-    }
+  .menu {
+    display: none;
+  }
 
   .hero {
     flex-direction: column;
@@ -927,7 +869,20 @@ input::placeholder {
     align-items: center;
   }
 
- 
+  .tag{
+    position: relative;
+    
+  }
+
+  .rodape{
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   text-align: center;
+   
+  }
+
+
 }
 
 
@@ -947,22 +902,11 @@ input::placeholder {
     justify-content: center;
     text-align: center;
     max-width: 100%;
+
   }
 
-  .nav {
-    position: absolute;
-    justify-content: center;
-    left: 15%;
-  }
+  /* Responsividade */
 
-  .logo{
-    position: absolute;
-    font-size: 30px;
-  }
-
-  .menu {
-    display: none;
-  }
 
   .profile {
     position: relative;
@@ -1015,7 +959,7 @@ input::placeholder {
     position: relative;
     right: 5px;
     padding: 20px 0;
-     position: relative;
+    position: relative;
     margin-right: 26%;
     align-items: center;
     justify-content: center;
@@ -1024,7 +968,7 @@ input::placeholder {
     right: 12%;
   }
 
-  .h4{
+  .h4 {
     position: relative;
     margin-right: 15px;
   }
@@ -1035,8 +979,8 @@ input::placeholder {
     width: 90%;
     min-width: 50%;
     text-align: center;
-    
-    & h2{
+
+    & h2 {
       font-size: 2rem;
     }
   }
@@ -1048,7 +992,7 @@ input::placeholder {
     width: 85%;
   }
 
-  
+
 
   .item {
     left: 200%;
@@ -1074,40 +1018,46 @@ input::placeholder {
     }
   }
 
-  .Contact, input{
+  .Contact,
+  input {
     width: 80%;
 
-    & textarea{
+    & textarea {
       width: 80%;
     }
   }
 
-  .rodape{
-    position: relative;
-    gap: 30px;
+  .rodape {
     flex-direction: column;
-    
+
   }
 
-  .email{
+  .tag {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .email {
     font-size: 15px;
     position: relative;
     flex-direction: column;
-    
+    width: 90%;
   }
-  
- .rodape2 {
-  position: inherit;
-  display: flex;
-  justify-content: center;  /* Centraliza os ícones */
-  align-items: center;
-  gap: 10px;
-  width: 100%;
-  flex-wrap: wrap;
-  overflow-x: hidden; /* evita barra horizontal */
-}
 
-  
+
+  .rodape2 {
+    position: inherit;
+    display: flex;
+    justify-content: center;
+    /* Centraliza os ícones */
+    align-items: center;
+    gap: 10px;
+    width: 105%;
+
+  }
+
+
 
 }
 
@@ -1125,7 +1075,7 @@ input::placeholder {
 @media (max-width: 500px) {
 
 
-  .nav{
+  .nav {
     width: 80%;
     left: 10%;
   }
@@ -1151,9 +1101,9 @@ input::placeholder {
     }
   }
 
-   .baixo {
+  .baixo {
     margin-bottom: 90rem;
-    
+
   }
 
   .contact {
@@ -1166,16 +1116,16 @@ input::placeholder {
     position: relative;
     flex-direction: column;
     width: 100%;
-    
+
   }
 
   .email {
     position: relative;
-   font-size: 12px; 
-   top: 20px;
-   
+    font-size: 12px;
+    top: 20px;
+
   }
 
-  
+
 
 }
