--- a/styles.css
+++ b/styles.css
@@ -453,13 +453,14 @@ h2 {
   position: relative;
   align-items: center;
   justify-content: center;
+  text-align: center;
   display: flex;
   gap: 10px;
   margin-top: 40px;
   font-size: 40px;
   border-radius: 50px;
   cursor: pointer;
-  right: 0;
+  right: 0px;
 }
 
 .h4 {
@@ -781,7 +782,7 @@ input::placeholder {
     right: 13%;
   }
 
-  
+
 
 
 }
@@ -792,16 +793,16 @@ input::placeholder {
 
 
   * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 
   body {
     overflow-x: hidden;
   }
 
-  .desktop-nav{
+  .desktop-nav {
     display: none;
   }
 
@@ -819,10 +820,10 @@ input::placeholder {
     justify-content: center;
   }
 
-  .logo h2{
+  .logo h2 {
     text-align: center;
     align-items: center;
-    justify-content: center ;
+    justify-content: center;
   }
 
   .menu {
@@ -879,17 +880,17 @@ input::placeholder {
     align-items: center;
   }
 
-  .tag{
+  .tag {
     position: relative;
-    
+
   }
 
-  .rodape{
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   text-align: center;
-   
+  .rodape {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
   }
 
 
@@ -1063,7 +1064,7 @@ input::placeholder {
     /* Centraliza os ícones */
     align-items: center;
     gap: 10px;
-    
+
 
   }
 
@@ -1081,14 +1082,10 @@ input::placeholder {
 
 
 
-
 @media (max-width: 500px) {
 
 
-  .nav {
-    width: 80%;
-    left: 10%;
-  }
+
 
   @keyframes autoRun {
     from {
@@ -1103,11 +1100,11 @@ input::placeholder {
   @keyframes reverseRun {
 
     from {
-      left: -350px;
+      left: -450px;
     }
 
     to {
-      left: 1220%;
+      left: 720%;
     }
   }
 
@@ -1120,20 +1117,6 @@ input::placeholder {
     & h2 {
       font-size: 10px;
     }
-  }
-
-  .rodape {
-    position: relative;
-    flex-direction: column;
-    width: 100%;
-
-  }
-
-  .email {
-    position: relative;
-    font-size: 12px;
-    top: 20px;
-
   }
 
 
