--- a/styles.css
+++ b/styles.css
@@ -198,14 +198,130 @@ canvas {
   transform: translateY(0);
 }
 
+
+
+.sobre {
+  position: relative;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+#sobre{
+  margin-bottom: 355px;
+}
+
+.sobre-texto {
+  width: 1520px;
+  font-size: 23px;
+  position: relative;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: #c2c2c2;
+  text-align: inherit;
+}
+
+.R {
+  display: flex;
+  position: relative;
+  gap: 100px;
+}
+
+.pf {
+  color: #ff6565;
+  font-size: 30px;
+  text-shadow: 0 0 30px #ff0000;
+}
+
+.R,
+h2 {
+  margin-top: 50px;
+
+}
+
+.title {
+  position: relative;
+  top: 20px;
+  font-size: 40px;
+  text-align: center;
+}
+
+.mim {
+  background: linear-gradient(90deg, rgb(255, 142, 142) 20%, rgb(255, 67, 67) 68%, rgb(255, 27, 27) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.profile {
+  position: relative;
+  width: 450px;
+  height: 550px;
+  
+  left: 50px;
+  margin-top: auto;
+
+}
+
+.link {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  display: flex;
+  gap: 80px;
+  margin-top: 0px;
+  font-size: 40px;
+  border-radius: 50px;
+  cursor: pointer;
+  
+}
+
+.h5{
+  text-align: center;
+}
+
+
+
+
+
+.linke,
+.githu {
+  flex-direction: column-reverse;
+  border: #ff0000 solid;
+  border-radius: 100px;
+  padding: 10px 15px;
+  box-shadow: 0 0 30px var(--highlight);
+  transition: 0.7s;
+}
+
+
+.linke:hover {
+  background: #ffffff;
+
+  & i {
+    color: blue;
+    transition: 0.3s;
+  }
+}
+
+.githu:hover {
+  background: #ffffff;
+
+  & i {
+    color: rgb(94, 94, 94);
+    transition: 0.3s;
+  }
+}
+
 .baixo {
   position: relative;
   display: flex;
   text-align: center;
   justify-content: center;
-  bottom: 150px;
+  top: 150px;
   height: 850px;
   cursor: pointer;
+  margin-bottom: 350px;
 
   & p {
     color: #d3d3d3;
@@ -215,13 +331,13 @@ canvas {
 .especialidades h2 {
   position: relative;
   text-align: center;
-  margin-bottom: 270px;
+  margin-top: 270px;
   font-size: 50px;
   background: linear-gradient(90deg, rgb(255, 255, 255) 40%, #ff0000 68%, rgb(255, 255, 255) 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  top: 100px;
+  top: 135px;
 }
 
 .p {
@@ -391,119 +507,6 @@ h2 {
   margin-bottom: 30px;
 }
 
-.sobre {
-  position: relative;
-  bottom: 80px;
-}
-
-.sobre-texto {
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: 1520px;
-  font-size: 23px;
-  position: relative;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: #c2c2c2;
-  text-align: inherit;
-}
-
-.R {
-  display: flex;
-  position: relative;
-  gap: 100px;
-}
-
-.pf {
-  color: #ff6565;
-  font-size: 30px;
-  text-shadow: 0 0 30px #ff0000;
-}
-
-.R,
-h2 {
-  margin-top: 50px;
-
-}
-
-.title {
-  position: relative;
-  top: 20px;
-  font-size: 40px;
-  text-align: center;
-}
-
-.mim {
-  background: linear-gradient(90deg, rgb(255, 142, 142) 20%, rgb(255, 67, 67) 68%, rgb(255, 27, 27) 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.profile {
-  position: relative;
-  width: 450px;
-  height: 550px;
-  margin-bottom: 530px;
-  left: 50px;
-  margin-top: auto;
-
-}
-
-.link {
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  display: flex;
-  gap: 10px;
-  margin-top: 40px;
-  font-size: 40px;
-  border-radius: 50px;
-  cursor: pointer;
-  right: 13%;
-  left: 0 auto;
-}
-
-.h4 {
-  position: relative;
-  left: 110px;
-  margin-bottom: 130px;
-  right: 0;
-}
-
-
-.linke,
-.githu {
-  flex-direction: column-reverse;
-  border: #ff0000 solid;
-  border-radius: 100px;
-  padding: 10px 15px;
-  box-shadow: 0 0 30px var(--highlight);
-  transition: 0.7s;
-}
-
-
-.linke:hover {
-  background: #ffffff;
-
-  & i {
-    color: blue;
-    transition: 0.3s;
-  }
-}
-
-.githu:hover {
-  background: #ffffff;
-
-  & i {
-    color: rgb(94, 94, 94);
-    transition: 0.3s;
-  }
-}
-
-
-
 .contaneir {
   width: 100%;
   height: var(--height);
@@ -511,16 +514,21 @@ h2 {
   -webkit-mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
   position: relative;
   text-align: center;
-  margin-bottom: 500px;
-  margin-top: 180px;
   overflow: hidden;
 }
 
+
+
 .projeto {
   position: relative;
-  top: 100px;
   text-align: center;
   font-size: 50px;
+  bottom: 100px;
+  
+}
+
+#projects{
+  height: 220px;
 }
 
 .carrosel {
@@ -597,10 +605,10 @@ h2 {
 
 
 .Contact {
+  position: relative;
   align-items: center;
   text-align: center;
-  margin-bottom: 50px;
-
+  margin-top: 100px;
 }
 
 .Contact,
@@ -614,7 +622,8 @@ ul {
 
 .Contact h2 {
   position: relative;
-  bottom: 100px;
+  bottom: 80px;
+  margin-top: 530px;
   font-size: 60px;
 
 }
@@ -634,7 +643,7 @@ textarea {
   padding: 2rem;
   border-radius: 20px;
   position: relative;
-  bottom: 70px;
+  bottom: 50px;
   background-color: #2b2a2a;
   color: #ffffff;
   border: none;
@@ -658,6 +667,7 @@ input::placeholder {
 .rodape {
   width: 100%;
   display: flex;
+  margin-top: 20px;
   justify-content: space-between; /* separa esquerda e direita */
   align-items: center;
   padding: 20px 5%;
@@ -866,7 +876,7 @@ input::placeholder {
   }
 
   .baixo {
-    margin-bottom: 70rem;
+    margin-bottom: 120rem;
   }
 
   .especi {
@@ -957,25 +967,8 @@ input::placeholder {
     height: 300px;
   }
 
-  .link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    position: relative;
-    padding: 20px 0;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 27px;
-    
-  }
 
-  .h4 {
-    position: relative;
-    margin-right: 15px;
-  }
+ 
 
   .especialidades {
     position: relative;
