--- a/styles.css
+++ b/styles.css
@@ -910,7 +910,7 @@ input::placeholder {
 
   body {
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
