--- a/styles.css
+++ b/styles.css
@@ -916,8 +916,8 @@ input::placeholder {
     align-items: center;
     justify-content: center;
     text-align: center;
-    max-width: 105%;
-
+    max-width: 99%;
+    position: relative;
   }
 
   /* Responsividade */
