--- a/styles2.css
+++ b/styles2.css
@@ -78,7 +78,9 @@
   background: transparent;
   padding: 16px 0;
   margin-top: 12px;
-  margin-left: 90%;
+   margin-left: 0;
+  right: 5%;
+  max-width: 90vw;
   border-radius: 8px;
   position: relative;
   z-index: 998;
