--- a/styles.css
+++ b/styles.css
@@ -919,7 +919,8 @@ input::placeholder {
   .Skills,
   .Education {
     padding: 10px 10px;
-    width: 300px;
+    width: 350px;
+    overflow-wrap: break-word; 
   }
 
   @keyframes autoRun {
@@ -1012,30 +1013,13 @@ input::placeholder {
 
 
 
-
-  .especialidades {
-    position: relative;
-    margin-top: 200px;
-    width: 90%;
-    min-width: 50%;
-    text-align: center;
-
-    & h2 {
-      font-size: 2rem;
-    }
-  }
-
-  .especi {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 85%;
-  }
+  
 
 
 
   .item {
     left: 100%;
+    height: 400px;
   }
 
   @keyframes autoRun {
