--- a/styles.css
+++ b/styles.css
@@ -561,7 +561,7 @@ h2 {
 
 .contaneir.reverse{
   position: relative;
-  margin-top: 200px;
+  margin-bottom: 500px;
 }
 
 .contaneir.reverse .item {
