--- a/styles.css
+++ b/styles.css
@@ -551,7 +551,7 @@ h2 {
 .item {
   width: var(--width);
   height: var(--height);
-  
+  position: absolute;
   left: 100%;
   animation: autoRun 10s linear infinite;
   animation-delay: calc(15s / var(--quantity) * var(--delay));
